--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^4.29.19",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
